# order_predict

./: .Rhistory  .gitignore  01_relation_price_quantity.R  README.md  main.py  pyproject.toml
.Rproj.user/4FA51DD4/jobs/: 57105BDE-output.json
.Rproj.user/4FA51DD4/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/4FA51DD4/sources/prop/: 42CBFAF9  751D9F88  INDEX
.Rproj.user/4FA51DD4/sources/session-44161c59/: 25C9173F  9D42F4A3  9D42F4A3-contents  F1B5EEDB  F1B5EEDB-contents
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/05C7C9CF-demand_anlaysis/1/s/: chunks.json
notebook/: EDA_and_Visualization.ipynb
src/: data_preprocessing.py  eda.py  feature_engineering.py  models.py  utils.py
