[tool.poetry]
name = "order-predict"
version = "0.1.0"
description = ""
authors = ["hakuna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
cowsay = "^6.1"
seaborn = "^0.13.0"
plotly = "^5.18.0"
jupyter = "^1.0.0"
holidays = "^0.37"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
